--- a/src/App.css
+++ b/src/App.css
@@ -39,8 +39,7 @@
 
 .login-container{
   display: flex;
-  background-image: linear-gradient(rgba(0, 10, 0, 0.7), rgba(0, 0, 0, 0.7)), url("./assets/images/forest.jpg");
-  background-size: cover;
+  background-color: #ba5d00;
   height: 100vh;
   justify-content: center;
   align-items: center;
@@ -57,6 +56,7 @@
   justify-content: space-around;
   align-items: center;
   background-color: rgba(255,255,255,0.2);
+  border-radius: 10px;
 
 }
 .form-size{
@@ -112,4 +112,16 @@
   color: white;
   background-color: rgba(79, 144, 255, 0.6);
   border-radius: 5px;
+}
+
+.phone-card{
+  border: 1px solid #4f90ff;
+  color: #4f90ff;
+  height: 150px;
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  justify-content: space-around;
+  padding: 0 10px;
 }
